# minima

./: .gitignore  CMakeLists.txt  README.md  autograd.html  data.html  index.html  init.html  ndarray.html  ndarray_backend_numpy.html  nn.html  operators.html  ops.ipynb  optim.html  robots.txt  search.json  settings.ini  sitemap.xml  utility.html
_docs/: Untitled.html  autograd.html  core.html  index.html  nn.html  operators.html  search.json  sitemap.xml
_proc/: 00_autograd.ipynb  01_operators.ipynb  02_init.ipynb  03_nn.ipynb  04_optim.ipynb  05_data.ipynb  06_ndarray.ipynb  06_optim.ipynb  07_ndarray_backend_numpy.ipynb  08_utility.ipynb  Untitled.ipynb  autograd.html  index.html  index.ipynb  ndarray.html  optim.ipynb  sidebar.yml
_proc/_docs/: autograd.html  core.html  index.html  init.html  nn.html  operators.html  search.json  sitemap.xml
include/cpu_backend/: aligned_buffer.h  operations.h
minima/: __init__.py  _modidx.py  autograd.py  core.py  data.py  init.py  learner.py  minima_backend.py  ndarray.py  ndarray_backend_numpy.py  nn.py  operators.py  optim.py  utility.py
nbs/: 00_autograd.ipynb  01_operators.ipynb  02_init.ipynb  03_nn.ipynb  04_optim.ipynb  05_data.ipynb  06_ndarray.ipynb  07_ndarray_backend_numpy.ipynb  08_utility.ipynb  09_learner.ipynb  index.ipynb  nbdev.yml  optim.ipynb  sidebar.yml
src/: a.out  aligned_array.cc  main.cc
src/a.out.dSYM/Contents/Resources/DWARF/: a.out
src/cpu_backend/: aligned_array.cc  operations.cc
